--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@babel/preset-env": "^7.23.5",
     "@babel/preset-react": "^7.23.3",
     "@babel/preset-typescript": "^7.24.7",
+    "@types/lodash": "^4.17.7",
     "@types/node": "^20.14.12",
     "autoprefixer": "^10.4.16",
     "babel-loader": "^9.1.3",
