--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "qmedia-ui",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "files": [
@@ -34,8 +34,6 @@
     "webpack-cli": "^5.1.4"
   },
   "dependencies": {
-    "@fancyapps/ui": "^5.0.36",
-    "axios": "^1.6.2",
     "classnames": "^2.3.2",
     "feather-icons-react": "^0.7.0",
     "lodash": "^4.17.21",
@@ -44,9 +42,7 @@
     "react-focus-lock": "^2.12.1",
     "react-router-dom": "^6.21.3",
     "react-simple-star-rating": "^5.1.7",
-    "react-toastify": "^10.0.5",
-    "react-transition-group": "^4.4.5",
-    "swiper": "^11.0.5"
+    "react-transition-group": "^4.4.5"
   },
   "browserslist": {
     "production": [
